# PyArch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  script_base.py
pyarch/: main.py
pyarch/cli/: __init__.py  add.py  app.py  common.py  generate.py
pyarch/config/: manifest.py
pyarch/generators/common/: __init__.py  filesystem.py  gitignore.py
pyarch/generators/integration/: auth.py
pyarch/generators/module/: layered.py
pyarch/generators/project/: __init__.py  base.py  layered.py
pyarch/services/: add_integration.py  create_module.py  create_project.py
pyarch/templates/layered/: config.py.j2  router.py.j2
pyarch/templates/layered/auth/: config.py.j2  routes.py.j2  service.py.j2
pyarch/templates/layered/module/: module_model.py.j2  module_repo.py.j2  module_router.py.j2  module_schema.py.j2  module_service.py.j2
pyarch/templates/project/base/: conftest.py.j2
src/: main.py
src/cli/: add.py  app.py  generate.py
src/config/: __init__.py  manifest.py  models.py
src/generators/: __init__.py
src/generators/common/: commands.py  filesystem.py  renderer.py
src/generators/integration/: auth.py
src/generators/module/: __init__.py  layered.py
src/generators/project/: base.py  layered.py
src/services/: __init__.py  add_integration.py  create_module.py  create_project.py
src/templates/layered/: alembic_env.py.j2  env.example.j2  models_init.py.j2  session.py.j2
src/templates/layered/auth/: dependencies.py.j2  refresh_session_model.py.j2  schemas.py.j2  tokens.py.j2  user_model.py.j2  utils.py.j2
src/templates/layered/module/: module_repo.py.j2  module_router_protected.py.j2
src/templates/layered/mongodb/: config.py.j2  conftest.py.j2  env.example.j2  session.py.j2
(+6 files in other folders)
