[project]
name = "pyarch"
version = "0.1.0"
description = "CLI generator for Layered FastAPI projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "rich>=15.0.0",
    "tomlkit>=0.15.0",
    "typer>=0.24.2",
]

[project.scripts]
pyarch = "src.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
