[project]
name = "PyArch-CLI"
version = "0.1.0"
description = "Stateful CLI generator for Layered FastAPI projects"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["fastapi", "cli", "generator", "typer", "jinja2", "sqlalchemy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "cryptography>=46.0.3",
    "jinja2>=3.1.6",
    "rich>=15.0.0",
    "tomlkit>=0.15.0",
    "typer>=0.24.2",
]

[project.scripts]
pyarch = "pyarch.cli.app:app"

[project.urls]
Homepage = "https://github.com/Allcode-1/fastapi-skeleton-generator"
Repository = "https://github.com/Allcode-1/fastapi-skeleton-generator"
Issues = "https://github.com/Allcode-1/fastapi-skeleton-generator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyarch"]

[dependency-groups]
dev = []
